fix: remove white space from ads

--- a/blocks/ads-banner/ads-banner.scss
+++ b/blocks/ads-banner/ads-banner.scss
@@ -1,11 +1,10 @@
 .google-ads {
     &-image-wrapper {
-        padding: 40px 0;
+        padding: 40px 0 0;
         border-top: 1px solid var(--base-color);
-        border-bottom: 1px solid var(--base-color);
 
         @media (min-width: 992px) {
-            padding: 65px 0;
+            padding: 65px 0 0;
         }
 
         img {
